# sandcastle

./: .gitignore  .prettierignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  lefthook.yml  overload.txt  package.json  project.md  release-please-config.json  rpc.md  sandcastle.config.ts  turbo.json
.claude/: settings.json
.claude/commands/: commit-and-pr.md  commit.md  create-gh-pr.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release-desktop.yml  release-please.yml
apps/desktop/: .prettierignore  components.json  desktop-plan.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: bundle-server.ts  setup-dev-sidecar.ts
apps/desktop/src/: App.css  (+4 more)
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: dock.rs  high_refresh_rate.rs  lib.rs  main.rs  markdown.rs  sidecar.rs
apps/http/: package.json  prettier.config.ts
apps/web/: components.json  index.html  package.json  tsconfig.app.json  tsconfig.json  vercel-ignore-build.sh  vercel.json  vite.config.ts
docs/: agent-protocol.md  ai-sdk-v6-schema.md  backend-plan.md  chat-streaming-effect.md  chat-streaming-plan.md  chat-streaming.md  claude-agent-ai-sdk-adapter.md  claude-agents-sdk-v1.md  complete-ai-sdk-schema.md  config.md  effect-atom-guide.md  effect-rpc-stream.md  markdown-parsing.md  resumable-streams.md
tooling/: bump-version.ts
(+94 files in other folders)
