[package]
name = "sandcastle"
version = "0.2.3"
description = "The loop manager for your agents."
authors = ["Andres Martinez"]
license = "Apache-2.0"
repository = "https://github.com/andresmarpz/sandcastle"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sandcastle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["sync", "time"] }
comrak = { version = "0.36", default-features = false }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
objc = "0.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSObject"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKWebViewConfiguration", "WKPreferences"] }
